Fix scrollbar and mathInput-link-brokenLink plugin in fullscreen mode

--- a/packages/ckeditor5-build-classic/src/fullscreen-plugin/css/style.css
+++ b/packages/ckeditor5-build-classic/src/fullscreen-plugin/css/style.css
@@ -8,15 +8,6 @@
 	left: 0;
 }
 
-#classicEditorFullscreen .ck.ck-editor__main {
-	height: 100%;
-}
-
-#classicEditorFullscreen .ck.ck-editor__main .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-blurred, #classicEditorFullscreen .ck.ck-editor__main .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-focused{
-	height: 100%;
-	max-height: 100%;
-}
-
 #toolbarInlineEditorFullscreen {
 	top: 0 !important;
     left: 0 !important;
@@ -30,24 +21,11 @@
 	max-width: 9999px !important;
 }
 
-#bodyInlineEditorFullscreen .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-blurred{
-	height: 100%;
+#bodyInlineEditorFullscreen .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-blurred, #bodyInlineEditorFullscreen .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-focused{
 	position: fixed;
 	z-index: 9999;
 	top: 40px;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	max-height: 100%;
-}
-
-#bodyInlineEditorFullscreen .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-focused{
-	height: 100%;
-	position: fixed;
-	z-index: 9999;
-	top: 40px;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	max-height: 100%;
 }
